# MoonShot

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_PATH_REVIEW.md  Cargo.toml  HowTo.md  README.md  test_embedding_model.cpp  vcpkg.json  verify_tfidf_embedding.cpp
.cargo/: config.toml
Compiler/: EvalExpression.h  IndexSearchCompiler.h
Configuration/: ConfigParameters.h
Embeddings/: Embeddings.h
Executor/: CMakeLists.txt  IndexSearchExecutor.cpp  IndexSearchExecutor.h
IndexAccess/: AdvancedIndexReader.cpp  AdvancedIndexReader.h  AdvancedIndexWriter.cpp  AdvancedIndexWriter.h  BlockTable.h  BloomFilter.cpp  BloomFilter.h  Bm25Scorer.h  CMakeLists.txt  ElementFilter.cpp  ElementFilter.h  FileBlockManager.h  HashFunctions.cpp  HashFunctions.h  IndexAccessUnitTest.cpp  IndexContext.h  IndexReader.h  IndexReaderImpl.h  IndexSearchCompiler.h  IndexSerializer.cpp  IndexSerializer.h  IndexVersion.h  IndexWriter.h  IsrImpl.h  MemOperation.cpp  MemOperation.h  PostingStore.h  SearchResult.h  UnifiedDecoder.h
RustBlade/: CMakeLists.txt  Cargo.toml
RustBlade/examples/: demo.rs  morning_vietnam.rs  search.rs
RustBlade/src/: advanced_reader.rs  block_table.rs  bm25.rs  clock_cache.rs  codec.rs  compiler.rs  composite_readers.rs  dictionary.rs  doc_store.rs  document.rs  engine.rs  error.rs  eval_tree.rs  executor.rs  fusion.rs  index_context.rs  index_reader.rs  index_writer.rs  inverted_index.rs  isr.rs  isr_pool.rs  lib.rs  pinned_memory.rs  posting_store.rs  postings.rs  query.rs  serializer.rs  tokenizer.rs  varbyte_decoder.rs  vector_index.rs  wasm_api.rs
RustBlade/tests/: merge.rs  search_task.rs
Service/: CMakeLists.txt  MatchService.cpp  MatchService.h  MatchService.proto  README.md  ShenNongImp.cpp  ShenNongImp.h  ShennongHttp.cpp  main.cpp
Test/Foo/: mf.cpp  mm.cpp
Test/UnitTest/: CMakeLists.txt  IndexAccessUnitTest.cpp  Search.cpp  UnitTestMain.cpp
Tokenizer/: CMakeLists.txt  SmartTokenizer.cpp  Tokenizer.h
Tools/: BGE_BIENCODER_README.md  CMakeLists.txt  bge_embedding_service.py  compare_beir_runs.mjs  compare_beir_runs.py  concat_i8bin_vectors.py  embed_query.py  generate_beir_embeddings.py  gpu_vector_eval.py  hybrid_tail_merge.mjs  inspect_beir_delta.mjs  make_beir_subset.py  merge_beir_runs.mjs  mkfile  moon_inspect.cpp  remote_eval_bge.sh  remote_generate_bge.sh
Tools/moon_wasm/: Cargo.toml  README.md  index.html  serve.py
Tools/moon_wasm/src/: lib.rs
Utils/: CMakeLists.txt  Constants.h  FileAccess.cpp  FileAccess.h
cmake/: MoonShotConfig.cmake.in  grpc.cmake
docs/: index-design.md  manual.md  query-syntax.md
examples/: CMakeLists.txt  demo.cpp  fulltext_search.cpp  moon.cpp  quickstart.cpp
include/: moonshot.h
