[package]
name = "rustblade"
version = "0.2.0"
edition = "2021"
description = "MoonShot search engine — Rust implementation, v2 block-based index format"

[lib]
name = "rustblade"

[features]
default = ["native-alloc"]
# Use mimalloc on native targets; disable for WASM
native-alloc = ["mimalloc"]
# Enable WASM bindings
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]

[dependencies]
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
thiserror            = "1"
rand                 = { version = "0.8", features = ["small_rng"] }
mimalloc             = { version = "0.1", default-features = false, optional = true }
wasm-bindgen         = { version = "0.2", optional = true }
js-sys               = { version = "0.3", optional = true }
serde-wasm-bindgen   = { version = "0.6", optional = true }
icu_segmenter = "2.2.0"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "morning_vietnam"
path = "examples/morning_vietnam.rs"
