[package]
name = "rustblade"
version = "0.2.0"
edition = "2021"
description = "MoonShot search engine — Rust implementation, v2 block-based index format"

[lib]
name = "rustblade"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]

[dependencies]
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
thiserror            = "1"
rand                 = { version = "0.8", features = ["small_rng"] }
wasm-bindgen         = { version = "0.2", optional = true }
js-sys               = { version = "0.3", optional = true }
serde-wasm-bindgen   = { version = "0.6", optional = true }
icu_segmenter = "2.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc             = { version = "0.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys          = { version = "0.59", features = ["Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc                 = "0.2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bin]]
name = "moon_rs"
path = "src/bin/moon.rs"

[[bin]]
name = "shennong_rs"
path = "src/bin/shennong.rs"

