[package]
name = "moon-wasm"
version = "0.1.0"
edition = "2021"
description = "MoonShot index viewer — compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
rustblade    = { path = "../../RustBlade", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
getrandom    = { version = "0.2", features = ["js"] }
